--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.3",
+    "react-redux": "^8.1.3",
+    "axios": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
