--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "redux-saga": "^1.2.3",
-    "react-redux": "^8.1.3",
-    "axios": "^1.5.1"
+    "redux-saga": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
